Bug 1341691 - Improve handling of touch events when dismissing popups. r=jimm a=lizzard

When user input is used to dismiss popups, the user input may sometimes
be consumed (for example, clicking on a combobox element will dismiss
the combobox popup, but consume the event to avoid reopening the popup
right away). This handling was present for some types of input events but
missing for touch events. This patch adds it for touch events as well.

MozReview-Commit-ID: 5wsuTdMbkX2